# cap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
examples/: config.yml
src/: main.rs
src/assets/defaults/: config.yml
src/assets/templates/: basicplus.html
src/cap/: assets.rs  html.rs  mod.rs
src/cap/html/: elements.rs  mod.rs  template.rs
src/cli/: mod.rs
src/config/: mod.rs  resume.rs
src/console/: mod.rs
src/templates/: basic.html
src/templates/resume/: basic.jinja.html
tests/: init.rs  resume.rs  template.rs  test.config.yml
