[package]
name = "cap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.3", features = ["derive"] }
dunce = "1.0.3"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome"}
markdown = "0.3.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tempfile = "3.3.0"
tera = "1.17.1"
